--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <form action="" class="form">
-      <Label>
-        <input type="text">
+      <Label>Weather Checkr
+        <input class="weather-input" type="text" name="get-weather" placeholder="Enter city" autofocus>
       </Label>
-        <button>Get Weather</button>
+        <button type="submit" class="weather-button btn">Get Weather</button>
     </form>
-    
+    <div class="weather-info"></div>
+   <script src="main.js"></script> 
 </body>
 </html>
