--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form action="" class="form">
+    <form class="search-form js-search-form">
       <Label>Weather Checkr
-        <input class="weather-input" type="text" name="get-weather" placeholder="Enter city" autofocus>
+        <input class="weather-input" type="text" name="weather_input" placeholder="Enter city" autofocus>
       </Label>
         <button type="submit" class="weather-button btn">Get Weather</button>
     </form>
-    <div class="weather-info"></div>
+    <div class="weather-display"></div>
    <script src="main.js"></script> 
 </body>
 </html>
