--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+ 
     <form class="search-form js-search-form">
-      <Label>Weather Checkr
-        <input class="weather-input" type="text" name="weather_input" placeholder="Enter city" autofocus>
-      </Label>
+      <Label class="weather-label" for="weather-input">Weather Check<span><img src="https://openweathermap.org/img/wn/02d.png" alt="Weather icon"></span>r</Label>
+        <input class="weather-input" type="text" name="weather_input" id="weather-input" placeholder="Enter city" autofocus>
+      
         <button type="submit" class="weather-button btn">Get Weather</button>
+        <div class="weather-display js-weather-display"></div>
+    <div class="error-display js-error-display"></div>
     </form>
-    <div class="weather-display"></div>
+    
+  
    <script src="main.js"></script> 
 </body>
 </html>
