--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
  
     <form class="search-form js-search-form">
-      <Label class="weather-label" for="weather-input">Weather Check<span><img src="https://openweathermap.org/img/wn/02d.png" alt="Weather icon"></span>r</Label>
-        <input class="weather-input" type="text" name="weather_input" id="weather-input" placeholder="Enter city" autofocus>
+      <Label class="search-form-label" for="weather-input">Weather Check<span><img src="https://openweathermap.org/img/wn/02d.png" alt="Weather icon"></span>r</Label>
+        <input class="search-form-input" type="text" name="weather_input" id="weather-input" placeholder="Enter city" autofocus>
       
-        <button type="submit" class="weather-button btn">Get Weather</button>
+        <button type="submit" class="search-form-button">Get Weather</button>
         <div class="weather-display js-weather-display"></div>
     <div class="error-display js-error-display"></div>
     </form>
