--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
  
     <form class="search-form js-search-form">
       <Label class="search-form-label heading" for="weather-input">Weather Check<span class="label-span"><img class="label-span-img" src="https://openweathermap.org/img/wn/02d.png" alt="Weather icon"></span>r</Label>
-        <input class="search-form-input" type="text" name="weather_input" id="weather-input" placeholder="Enter city" autofocus>
-        <button type="submit" class="search-form-button">Get Weather</button>
-        <div class="weather-display js-weather-display"></div>
-    <div class="error-display js-error-display"></div>
+      <input class="search-form-input" type="text" name="weather_input" id="weather-input" placeholder="Enter city" autofocus>
+      <button type="submit" class="search-form-button">Get Weather</button>
+      <div class="weather-display js-weather-display"></div>
+      <div class="loader is-hidden"></div> 
+      <div class="error-display js-error-display"></div>
+      
     </form>
     
   
